@@ -1,3 +1,7 @@
+2012-01-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/api.py: Added support for Search API.
+
 2012-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py: Added support for feedlist store drag & drop.
